--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ API_ID=11245554
 API_HASH=0c43822f3a128287db0ee9c74ad02d8f
 BOT_TOKEN=1920905087:AAG_xCvsdjxVu8VUDt9s4JhD22ND-UIJttQ
 BIN_CHANNEL=-1001844389952
-PORT=443
+#PORT=443
 HAS_SSL=True
-FQDN=link.server.ccgnimex.my.id
+#FQDN=link.server.ccgnimex.my.id
 #WEB_SERVER_BIND_ADDRESS=0.0.0.0
 WORKERS=50
